--- a/index.html
+++ b/index.html
@@ -6,22 +6,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero Travel</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/responsive.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="Images/Group 40071 (2).png" alt="">
-                <h3 class="title">Hero Travel</h3></div>
-             <ul>
-                <li>Home</li>
-                <li>Packages</li>
-                <li>Testimonial</li>
-                <li>Blog</li>
-                <li>Contact</li>
-            </ul>
+            <div class="nav-container">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <h3 class="title"><span>Hero</span> Travel</h3>
+            </div>
+            <div class="nav-item">
+                <ul>
+                    <li><span>Home</span></li>
+                    <li>Packages</li>
+                    <li>Testimonial</li>
+                    <li>Blog</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+
         </nav>
+        <div class="head-banner">
+            <h4 class="banner-title">Explore Your Travel</h4>
+            <p class="banner-description description">
+                Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis
+                sapien urna eu phasellus.
+            </p>
+            <div class="banner-buttons">
+                <button>Where go</button>
+                <button>When <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        fill="none">
+                        <path d="M19.5 8.25L12 15.75L4.5 8.25" stroke="#131318" stroke-opacity="0.7" stroke-width="1.5"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                    </svg></button>
+                <button>Select Type <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M19.5 8.25L12 15.75L4.5 8.25" stroke="#131318" stroke-opacity="0.7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg></button>
+                <button class="find-btn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 24 24" fill="none">
+                        <path
+                            d="M21 21L15.803 15.803M15.803 15.803C17.2096 14.3965 17.9998 12.4887 17.9998 10.4995C17.9998 8.51035 17.2096 6.60262 15.803 5.19605C14.3964 3.78947 12.4887 2.99927 10.4995 2.99927C8.51031 2.99927 6.60258 3.78947 5.196 5.19605C3.78943 6.60262 2.99922 8.51035 2.99922 10.4995C2.99922 12.4887 3.78943 14.3965 5.196 15.803C6.60258 17.2096 8.51031 17.9998 10.4995 17.9998C12.4887 17.9998 14.3964 17.2096 15.803 15.803Z"
+                            stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    Find
+                </button>
+            </div>
+        </div>
     </header>
+    <main>
+        <section class="tour-section">
+            <div class="populur-tour">
+                <h3 class="bold2">
+                    Our Popular Tours
+                </h3>
+                <p class="description">
+                    Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                    nec nibh pellentesque.
+                </p>
+                <ul>
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
+                        erat at .</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                    <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                </ul>
+                <p class="description">
+                    Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                    natoque aliquet. Id bibendum nunc senectus semper tincidunt.
+                </p>
+                <button class="read orenge-btn">
+                    Read More
+                </button>
+            </div>
+            <img src="Images/Rectangle 4.png" alt="">
+
+        </section>
+        <div class="destination">
+            <h3 class="bold2">
+                Choose Your Destination
+            </h3>
+            <p>
+                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+            </p>
+        </div>
+        <section class="img-section">
+            <div class="row1">
+                <img src="Images/Rectangle 5.png" alt="">
+                <img src="Images/Rectangle 8.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
