added the subdcribe section

--- a/index.html
+++ b/index.html
@@ -640,10 +640,39 @@
                     Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
                 </p>
             </div>
+            <div class="pricing">
+              <div class="package">
+
+              </div>
+              <img class="swimming" src="Images/Group 39.png" alt=""></div>
+            <div><img src="Images/Group 40.png" alt=""></div>
+            <div><img src="" alt=""></div>
+            <button class="orenge-btn">
+              See All Packages
+            </button>
+        </section>
+        <section class="subscribe">
+          <div class="subscribe-form">
+            <h2 class="bold3">Newsletter</h2>
+            <p class="description">
+              Get your daily dose of travel news & tips. Sign up today!
+            </p>
+            <input type="text" name="" placeholder="Enter your name">
+            <br>
+            <input type="email" placeholder="Enter your email">
+            <br>
+            <button class="Subscribe-btn orenge-btn">
+              Subscribe
+            </button>
+          </div>
+          <div class="save-up">
+            <img src="Images/Rectangle 8 (1).png" alt="">
+          </div>
         </section>
     </main>
     <footer>
-        <div class="foott"><svg xmlns="http://www.w3.org/2000/svg" width="47" height="40" viewBox="0 0 47 40" fill="none">
+        <div class="foott"><div class="brand-logo">
+          <svg xmlns="http://www.w3.org/2000/svg" width="47" height="40" viewBox="0 0 47 40" fill="none">
             <g clip-path="url(#clip0_14_907)">
               <path d="M39.0105 15.8875L36.4539 15.8875C35.7003 13.7652 34.3722 11.8938 32.6177 10.4817C30.8633 9.06968 28.7512 8.17239 26.5169 7.88981C24.2825 7.60723 22.0136 7.95045 19.9628 8.88126C17.9121 9.81206 16.1599 11.2939 14.9016 13.1617C14.6725 13.51 14.5423 13.9139 14.5248 14.3303C14.5072 14.7468 14.6031 15.1602 14.8021 15.5265C15.0011 15.8927 15.2957 16.1981 15.6547 16.4101C16.0136 16.622 16.4233 16.7325 16.8402 16.7299L19.9301 16.7299L19.9301 23.2702L16.8917 23.2702C16.4725 23.2684 16.0608 23.3808 15.7007 23.5954C15.3406 23.8099 15.0458 24.1186 14.848 24.4881C14.6502 24.8577 14.5568 25.2741 14.5779 25.6928C14.599 26.1114 14.7338 26.5164 14.9678 26.8641C16.2346 28.7053 17.9842 30.1618 20.0245 31.0737C22.0649 31.9856 24.3171 32.3176 26.5338 32.0333C28.7505 31.749 30.8459 30.8594 32.5901 29.4621C34.3343 28.0648 35.6597 26.2139 36.4208 24.1126L38.9958 24.1126C38.1004 27.131 36.2537 29.7791 33.7307 31.6624C31.2077 33.5457 28.1437 34.5632 24.9954 34.5632C17.0425 34.5632 6.58083 27.0002 1.33897 22.7589C0.922886 22.4198 0.587517 21.9924 0.357193 21.5075C0.126869 21.0227 0.00736635 20.4927 0.00736635 19.9559C0.00736636 19.4192 0.126869 18.8891 0.357193 18.4043C0.587517 17.9195 0.922886 17.492 1.33897 17.1529C6.54405 12.9116 16.9321 5.3633 25.0064 5.3633C28.165 5.36665 31.2372 6.3942 33.7622 8.29175C36.2872 10.1893 38.1287 12.8545 39.0105 15.8875Z" fill="#FF5400"/>
               <path d="M3.69322 18.4514C3.36452 18.556 3.07758 18.7624 2.87392 19.0408C2.67025 19.3192 2.5604 19.6551 2.56024 20.0001C2.5604 20.345 2.67025 20.681 2.87392 20.9593C3.07758 21.2377 3.36452 21.4441 3.69322 21.5487L6.01435 23.2703L39.5402 23.2703C40.5847 23.2704 41.6256 23.1469 42.6412 22.9024C43.6385 22.6551 44.6011 22.2844 45.5067 21.7989C45.8539 21.6416 46.1485 21.3876 46.3551 21.0673C46.5616 20.747 46.6715 20.3739 46.6715 19.9927C46.6715 19.6116 46.5616 19.2385 46.3551 18.9181C46.1485 18.5978 45.8539 18.3438 45.5067 18.1866C44.6011 17.7011 43.6385 17.3304 42.6412 17.083C41.6256 16.8385 40.5847 16.7151 39.5402 16.7152L6.01435 16.7152L3.69322 18.4514Z" fill="#FF5400"/>
@@ -661,7 +690,8 @@
             </defs>
           </svg>
         <h3 class="title">Hero <span>Travel</span></h3>
-        <p>
+        </div>
+        <p class="descriotion">
             Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. 
         </p>
         <svg  xmlns="http://www.w3.org/2000/svg" width="175" height="24" viewBox="0 0 175 24" fill="none">
@@ -673,7 +703,7 @@
             <path fill-rule="evenodd" clip-rule="evenodd" d="M162.788 0C156.397 0 151.255 5.11733 151.255 11.4781C151.255 16.5476 154.571 20.8519 159.136 22.3823C159.713 22.478 159.905 22.1432 159.905 21.8084C159.905 21.5215 159.905 20.8041 159.905 19.8476C156.685 20.565 156.013 18.3172 156.013 18.3172C155.484 16.9781 154.715 16.6433 154.715 16.6433C153.658 15.9259 154.811 15.9259 154.811 15.9259C155.964 16.0216 156.589 17.1215 156.589 17.1215C157.598 18.8911 159.28 18.365 159.953 18.0781C160.049 17.3128 160.337 16.8346 160.674 16.5476C158.127 16.2607 155.436 15.2563 155.436 10.8564C155.436 9.61293 155.868 8.56077 156.637 7.79556C156.541 7.50861 156.109 6.3608 156.733 4.73473C156.733 4.73473 157.694 4.44777 159.905 5.93037C160.818 5.69124 161.827 5.54776 162.788 5.54776C163.749 5.54776 164.759 5.69124 165.672 5.93037C167.882 4.44777 168.843 4.73473 168.843 4.73473C169.468 6.31297 169.083 7.46078 168.939 7.79556C169.66 8.60859 170.141 9.61293 170.141 10.8564C170.141 15.2563 167.45 16.2129 164.855 16.4998C165.287 16.8346 165.624 17.552 165.624 18.6041C165.624 20.1345 165.624 21.378 165.624 21.7606C165.624 22.0476 165.816 22.4302 166.44 22.3345C171.006 20.8519 174.321 16.5476 174.321 11.4781C174.321 5.11733 169.18 0 162.788 0Z" fill="#131318"/>
           </svg>
         </div>
-        <p>
+        <p class="right descriotion">
             2017, All Rights Reserved.
         </p>
           
