--- a/index.html
+++ b/index.html
@@ -651,6 +651,28 @@
               See All Packages
             </button>
         </section>
+        <section class="review-section">
+          <div class="review-info">
+            <h3 class="bold2">
+              A Simple Perfect Place To Get Lost
+            </h3>
+            <p class="description">
+              Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. 
+            </p>
+            <ul>
+              <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+              <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+            </ul>
+            <button class="orenge-btn">
+              See More
+            </button>
+          </div>
+          <div class="review-video">
+            <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=iwIhRLWtsp6wTuoR&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>">Watch Our Mountain in Bangladesh</video>
+          </div>
+
+        </section>
+
         <section class="subscribe">
           <div class="subscribe-form">
             <h2 class="bold3">Newsletter</h2>
