--- a/index.html
+++ b/index.html
@@ -548,8 +548,9 @@
             </div>
         </section>
         <section class="price-section">
-           <div class="best-price">
-            <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
+           <!-- <div class=""> -->
+            <div class="best-price">
+              <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
                 <g clip-path="url(#clip0_8_486)">
                   <path d="M34.7023 13.4254L23.7179 6.26559H13.563L2.57857 13.4242C0.971161 14.4724 0.00250244 16.2624 0.00250244 18.1808V58.3234C0.00250244 60.139 0.852197 61.7547 2.17888 62.7937C3.14202 63.5487 4.35927 64 5.67905 64H31.6019C32.9528 64 34.1931 63.5299 35.1657 62.7423C36.4572 61.7021 37.2799 60.1094 37.2799 58.3234V18.1808C37.2799 16.2624 36.31 14.4724 34.7023 13.4254ZM18.6412 19.306C16.3568 19.3047 14.5047 17.4525 14.5047 15.1695C14.506 12.8851 16.3581 11.033 18.6412 11.033C20.9242 11.033 22.7763 12.8851 22.7777 15.1695C22.7777 17.4525 20.9256 19.3047 18.6412 19.306Z" fill="url(#paint0_linear_8_486)"/>
                   <path d="M6.57882 30.4674C14.9143 30.4674 21.7781 24.1713 22.6768 16.0757C22.2633 17.923 20.614 19.3049 18.6412 19.306C16.3568 19.3047 14.5047 17.4525 14.5047 15.1695C14.506 12.8851 16.3581 11.033 18.6412 11.033C20.8231 11.033 22.6102 12.725 22.7655 14.869C22.7728 14.6696 22.7777 14.4695 22.7777 14.2684C22.7777 11.3575 22.0093 8.62632 20.6652 6.26547H13.5631L2.57869 13.4241C0.971161 14.4724 0.00250244 16.2624 0.00250244 18.1808V29.0758C2.01223 29.9698 4.23729 30.4674 6.57882 30.4674Z" fill="url(#paint1_linear_8_486)"/>
@@ -629,7 +630,8 @@
               <p class="description">
                 Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. 
               </p>
-           </div>
+            </div>
+           <!-- </div> -->
         </section>
         <section class="discountion">
             <div class="deal">
@@ -644,10 +646,18 @@
               <div class="package">
 
               </div>
-              <img class="swimming" src="Images/Group 39.png" alt=""></div>
-            <div><img src="Images/Group 40.png" alt=""></div>
-            <div><img src="" alt=""></div>
-            <button class="orenge-btn">
+              <img class="swimming" src="Images/Group 39.png" alt="">
+            </div>
+              <div>
+              <img src="Images/Group 40.png" alt="">
+            </div>
+            <div>
+              <img src="" alt="">
+            </div>
+            <div>
+              <img class="swimming" src="Images/Group 39.png" alt="">
+            </div></div>
+            <button class="package-btn">
               See All Packages
             </button>
         </section>
@@ -668,7 +678,7 @@
             </button>
           </div>
           <div class="review-video">
-            <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=iwIhRLWtsp6wTuoR&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>">Watch Our Mountain in Bangladesh</video>
+            <iframe class="bd-video" width="560" height="315" src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=iwIhRLWtsp6wTuoR&amp;controls=0" title="Bangladesh" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
 
         </section>
@@ -689,6 +699,7 @@
           </div>
           <div class="save-up">
             <img src="Images/Rectangle 8 (1).png" alt="">
+
           </div>
         </section>
     </main>
@@ -713,7 +724,7 @@
           </svg>
         <h3 class="title">Hero <span>Travel</span></h3>
         </div>
-        <p class="descriotion">
+        <p class="foot-discription descriotion">
             Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. 
         </p>
         <svg  xmlns="http://www.w3.org/2000/svg" width="175" height="24" viewBox="0 0 175 24" fill="none">
