added more style

--- a/index.html
+++ b/index.html
@@ -697,9 +697,12 @@
               Subscribe
             </button>
           </div>
-          <div class="save-up">
+          <div class="save-up-img">
             <img src="Images/Rectangle 8 (1).png" alt="">
-
+            <div class="save-up">
+              <p>Travel.com</p>
+              <h2 class="bold3" >Save up to 70%</h2>
+            </div>
           </div>
         </section>
     </main>
